feat: update vanus core deploy api
