# pkg/apiserver/handlers/cluster.go
@@ -22,7 +22,6 @@ import (
 	"github.com/vanus-labs/vanus-operator/api/models"
 	"github.com/vanus-labs/vanus-operator/api/restapi/operations/cluster"
 	vanusv1alpha1 "github.com/vanus-labs/vanus-operator/api/v1alpha1"
-	cons "github.com/vanus-labs/vanus-operator/internal/constants"
 	"github.com/vanus-labs/vanus-operator/internal/convert"
 	"github.com/vanus-labs/vanus-operator/pkg/apiserver/utils"
 	"k8s.io/apimachinery/pkg/api/errors"
@@ -49,22 +48,29 @@ func (a *Api) createClusterHandler(params cluster.CreateClusterParams) middlewar
 		return utils.Response(400, err)
 	}
 
+	// Check if the cluster namespace already exists, if exist, return error
+	err = a.createNsIfNotExist(params.Create)
+	if err != nil {
+		log.Errorf("create namespace %s failed, err: %s\n", params.Create.Namespace, err.Error())
+		return utils.Response(500, err)
+	}
+
 	// Check if the cluster already exists, if exist, return error
-	exist, err := a.checkClusterExist()
+	exist, err := a.checkClusterExist(params.Create)
 	if err != nil {
 		log.Errorf("check cluster exist failed, err: %s\n", err.Error())
 		return utils.Response(500, err)
 	}
 	if exist {
-		log.Warning("Cluster already exist")
+		log.Warningf("Cluster already exist in namespace %s\n", params.Create.Namespace)
 		return utils.Response(400, stderr.New("cluster already exist"))
 	}
 
-	log.Infof("Creating a new cluster %s/%s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName)
 	core := generateCore(params.Create)
-	resultCore, err := a.createCore(core, cons.DefaultNamespace)
+	log.Infof("Creating a new cluster %s/%s\n", core.Namespace, core.Name)
+	resultCore, err := a.createCore(core)
 	if err != nil {
-		log.Errorf("Failed to create new cluster %s/%s, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+		log.Errorf("Failed to create new cluster %s/%s, err: %s\n", core.Namespace, core.Name, err.Error())
 		return utils.Response(500, err)
 	}
 	log.Infof("Successfully create cluster: %+v\n", resultCore)
@@ -76,17 +82,17 @@ func (a *Api) createClusterHandler(params cluster.CreateClusterParams) middlewar
 }
 
 func (a *Api) deleteClusterHandler(params cluster.DeleteClusterParams) middleware.Responder {
-	_, err := a.getCore(cons.DefaultNamespace, cons.DefaultVanusCoreName, &metav1.GetOptions{})
+	_, err := a.getCore(params.Delete.Namespace, params.Delete.Name, &metav1.GetOptions{})
 	if err != nil {
 		if errors.IsNotFound(err) {
-			log.Errorf("Cluster %s/%s not found, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+			log.Errorf("Cluster %s/%s not found, err: %s\n", params.Delete.Namespace, params.Delete.Name, err.Error())
 			return utils.Response(404, err)
 		}
-		log.Errorf("Failed to get cluster %s/%s, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+		log.Errorf("Failed to get cluster %s/%s, err: %s\n", params.Delete.Namespace, params.Delete.Name, err.Error())
 		return utils.Response(500, err)
 	}
 
-	err = a.deleteCore(cons.DefaultNamespace, cons.DefaultVanusCoreName)
+	err = a.deleteCore(params.Delete.Namespace, params.Delete.Name)
 	if err != nil {
 		log.Errorf("delete cluster failed, err: %s\n", err.Error())
 		return utils.Response(500, err)
@@ -99,19 +105,19 @@ func (a *Api) deleteClusterHandler(params cluster.DeleteClusterParams) middlewar
 }
 
 func (a *Api) patchClusterHandler(params cluster.PatchClusterParams) middleware.Responder {
-	_, err := a.getCore(cons.DefaultNamespace, cons.DefaultVanusCoreName, &metav1.GetOptions{})
+	_, err := a.getCore(params.Patch.Namespace, params.Patch.Name, &metav1.GetOptions{})
 	if err != nil {
 		if errors.IsNotFound(err) {
-			log.Errorf("Cluster %s/%s not found, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+			log.Errorf("Cluster %s/%s not found, err: %s\n", params.Patch.Namespace, params.Patch.Name, err.Error())
 			return utils.Response(404, err)
 		}
-		log.Errorf("Failed to get cluster %s/%s, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+		log.Errorf("Failed to get cluster %s/%s, err: %s\n", params.Patch.Namespace, params.Patch.Name, err.Error())
 		return utils.Response(500, err)
 	}
 	core := &vanusv1alpha1.Core{
 		ObjectMeta: metav1.ObjectMeta{
-			Namespace:   cons.DefaultNamespace,
-			Name:        cons.DefaultVanusCoreName,
+			Namespace:   params.Patch.Namespace,
+			Name:        params.Patch.Name,
 			Annotations: params.Patch.Annotations,
 		},
 		Spec: vanusv1alpha1.CoreSpec{
@@ -120,7 +126,7 @@ func (a *Api) patchClusterHandler(params cluster.PatchClusterParams) middleware.
 	}
 	resultCore, err := a.patchCore(core)
 	if err != nil {
-		log.Errorf("Failed to patch cluster %s/%s, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+		log.Errorf("Failed to patch cluster %s/%s, err: %s\n", params.Patch.Namespace, params.Patch.Name, err.Error())
 		return utils.Response(500, err)
 	}
 	log.Infof("Successfully patch cluster: %+v\n", resultCore)
@@ -131,20 +137,22 @@ func (a *Api) patchClusterHandler(params cluster.PatchClusterParams) middleware.
 }
 
 func (a *Api) getClusterHandler(params cluster.GetClusterParams) middleware.Responder {
-	vanus, err := a.getCore(cons.DefaultNamespace, cons.DefaultVanusCoreName, &metav1.GetOptions{})
+	core, err := a.getCore(params.Get.Namespace, params.Get.Name, &metav1.GetOptions{})
 	if err != nil {
 		if errors.IsNotFound(err) {
-			log.Errorf("Cluster %s/%s not found, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+			log.Errorf("Cluster %s/%s not found, err: %s\n", params.Get.Namespace, params.Get.Name, err.Error())
 			return utils.Response(404, err)
 		}
-		log.Errorf("Failed to get cluster %s/%s, err: %s\n", cons.DefaultNamespace, cons.DefaultVanusCoreName, err.Error())
+		log.Errorf("Failed to get cluster %s/%s, err: %s\n", params.Get.Namespace, params.Get.Name, err.Error())
 		return utils.Response(500, err)
 	}
 	return cluster.NewGetClusterOK().WithPayload(&cluster.GetClusterOKBody{
 		Code: convert.PtrInt32(200),
 		Data: &models.ClusterInfo{
-			Version: vanus.Spec.Version,
-			Status:  "Running",
+			Name:      core.Name,
+			Namespace: core.Namespace,
+			Version:   core.Spec.Version,
+			Status:    "Running",
 		},
 		Message: convert.PtrS("success"),
 	})
@@ -161,20 +169,32 @@ func (a *Api) checkParamsValid(cluster *models.ClusterCreate) (bool, error) {
 	return true, nil
 }
 
-func (a *Api) checkClusterExist() (bool, error) {
-	_, exist, err := a.existCore(cons.DefaultNamespace, cons.DefaultVanusCoreName, &metav1.GetOptions{})
+func (a *Api) checkClusterExist(cluster *models.ClusterCreate) (bool, error) {
+	clusterList, err := a.listCore(cluster.Namespace, &metav1.ListOptions{})
 	if err != nil {
-		log.Errorf("Failed to get cluster, err: %s\n", err.Error())
+		log.Errorf("Failed to list cluster in namespace %s, err: %s\n", cluster.Namespace, err.Error())
 		return false, err
 	}
-	return exist, err
+	return len(clusterList.Items) != 0, err
+}
+
+func (a *Api) createNsIfNotExist(cluster *models.ClusterCreate) error {
+	exist, err := a.existNamespace(cluster.Namespace)
+	if err != nil {
+		log.Errorf("Failed to check namespace %s if exist, err: %s\n", cluster.Namespace, err.Error())
+		return err
+	}
+	if exist {
+		return nil
+	}
+	return a.createNamespace(cluster.Namespace)
 }
 
 func generateCore(cluster *models.ClusterCreate) *vanusv1alpha1.Core {
 	controller := &vanusv1alpha1.Core{
 		ObjectMeta: metav1.ObjectMeta{
-			Namespace:   cons.DefaultNamespace,
-			Name:        cons.DefaultVanusCoreName,
+			Name:        cluster.Name,
+			Namespace:   cluster.Namespace,
 			Annotations: cluster.Annotations,
 		},
 		Spec: vanusv1alpha1.CoreSpec{
